--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch --env-file .env src/server.ts",
     "build": "prisma generate && tsc",
     "vercel-build": "npx prisma generate",
     "start": "node dist/server.js"
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.712.0",
+    "@aws-sdk/s3-request-presigner": "^3.712.0",
     "@fastify/cookie": "^9.4.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/csrf-protection": "^7.0.1",
