--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts",
+    "dev": "tsx watch --env-file .env server.ts",
     "build": "prisma generate && tsc",
     "vercel-build": "npx prisma generate",
     "start": "node dist/server.js"
